--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="/home/j0hn/Documents/GitHub/asymob/edu.mit.jwi_2.4.0.jar"/>
+	<classpathentry kind="lib" path="/home/j0hn/Documents/GitHub/asymob/edu.mit.jwi_2.4.0.jar" sourcepath="edu.mit.jwi_2.4.0_jdk.jar"/>
 	<classpathentry kind="lib" path="/home/j0hn/Documents/GitHub/asymob/stanford-postagger.jar"/>
+	<classpathentry kind="lib" path="stanford-corenlp-4.2.0.jar" sourcepath="stanford-corenlp-4.2.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
