--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,8 @@
 	<classpathentry kind="lib" path="/home/j0hn/Documents/GitHub/asymob/edu.mit.jwi_2.4.0.jar" sourcepath="edu.mit.jwi_2.4.0_jdk.jar"/>
 	<classpathentry kind="lib" path="/home/j0hn/Documents/GitHub/asymob/stanford-postagger.jar"/>
 	<classpathentry kind="lib" path="stanford-corenlp-4.2.0.jar" sourcepath="stanford-corenlp-4.2.0-sources.jar"/>
+	<classpathentry kind="lib" path="jackson-core-2.9.9.jar" sourcepath="stanford-corenlp-4.2.0-sources.jar"/>
+	<classpathentry kind="lib" path="jackson-annotations-2.9.9.jar"/>
+	<classpathentry kind="lib" path="jackson-databind-2.9.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
