--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="jackson-core-2.9.9.jar" sourcepath="stanford-corenlp-4.2.0-sources.jar"/>
 	<classpathentry kind="lib" path="jackson-annotations-2.9.9.jar"/>
 	<classpathentry kind="lib" path="jackson-databind-2.9.9.jar"/>
+	<classpathentry kind="lib" path="commons-lang3-3.11.jar" sourcepath="commons-lang3-3.11-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
